        - Support for Generic Subquery limit "emulation" - awfully slow
          and inefficient but works on almost any db, and is preferred
          to software limit emulation
        - Sybase ASE driver now uses SET ROWCOUNT where possible, and
          Generic Subquery otherwise for limit support instead of always
          using software limit emulation

    * Fixes
        - Fix nasty potentially data-eating bug when deleting/updating
          a limited resultset
        - Fix find() to use result_class set on object
        - Fix result_class setter behaviour to not mistakenly stuff attrs.
        - Don't try and ensure_class_loaded an object. This doesn't work.
        - Fix as_subselect_rs to not inject resultset class-wide where
          conditions outside of the resulting subquery
        - update() on row not in_storage no longer throws an exception
          if there are no dirty columns to update (fixes cascaded update
          annoyances)
        - update()/delete() on prefetching resultsets no longer results
          in malformed SQL (some $rs attributes were erroneously left in)
        - Fix dbicadmin to allow deploy() on non-versioned schema
        - Fix dbicadmin to respect sql_dir on upgrade() (RT#57732)
        - Update Schema::Versioned to respect hashref style of
          connection_info
        - Do not recreate the same related object twice during MultiCreate
          (solves the problem of orphaned IC::FS files)
        - Fully qualify xp_msver selector when using DBD::Sybase with
          MSSQL (RT#57467)
        - Fix ::DBI::Storage to always be able to present a full set of
          connect() attributes to e.g. Schema::Versioned

    * Misc
        - Reformatted Changelog \o/
        - Allow developers to skip optional dependency forcing when working
          from a checkout
        - Add a warning to load_namespaces if a class in ResultSet/ is not
          a subclass of DBIx::Class::ResultSet